<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_greeting_text"
        android:layout_gravity="center_horizontal"
        android:textSize="32sp"
        android:layout_marginBottom="32dp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_email_label"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/register_form_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email_hint"
        android:layout_marginBottom="32dp"
        android:inputType="textEmailAddress"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:autofillHints="emailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_name_label"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/register_form_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_name_hint"
        android:layout_marginBottom="32dp"
        android:inputType="textEmailAddress"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="16dp"
        android:autofillHints="emailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_password_label"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/register_form_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:autofillHints="password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_about_label"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/register_form_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/register_about_hint"
        android:layout_marginHorizontal="16dp"
        android:autofillHints="name"
        android:lines="3" />

    <Button
        android:id="@+id/register_button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_submit"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp" />


</LinearLayout>