<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_greeting"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/login_form_error"
        android:textColor="#C61111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="48dp"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_email_label"
        android:layout_marginStart="24dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/login_form_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/login_email_hint"
        android:autofillHints="emailAddress"
        android:paddingVertical="24dp"
        android:layout_marginHorizontal="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password_label"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/login_form_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/login_password_hint"
        android:paddingVertical="24dp"
        android:autofillHints="password"
        android:layout_marginHorizontal="24dp" />

    <Button
        android:id="@+id/login_button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:textSize="18sp"
        android:text="@string/login_button_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:text="@string/login_no_account_text" />

        <TextView
            android:id="@+id/login_button_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:text="@string/login_navigate_to_signup_text"
            android:textSize="16sp"
            android:focusable="true" />
    </LinearLayout>
</LinearLayout>