<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:layout_marginHorizontal="24dp"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/profile_placeholder_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/profile_placeholder_email"
        android:textSize="18sp"
        android:layout_marginBottom="32dp" />

    <TextView
        android:id="@+id/profile_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_placeholder_about"
        android:textSize="18sp" />

</LinearLayout>